--- a/update.html
+++ b/update.html
@@ -102,7 +102,8 @@
     });
 
     ipcRenderer.on('update-progress', (event, progress) => {
-      span.innerText = `${files[now]} ${(progress * 100).toFixed(2) || 0}%`;
+		if(!progress || progress == Infinity) progress = 0;
+      span.innerText = `${files[now]} ${(progress * 100).toFixed(2)}%`;
     });
 
     ipcRenderer.on('update-done', (event, state) => {
